	PR c++/84609 	* parser.c (cp_parser_attributes_opt): Formatting fix. 	(cp_parser_skip_balanced_tokens, cp_parser_skip_gnu_attributes_opt, 	cp_parser_skip_std_attribute_spec_seq, cp_parser_skip_attributes_opt): 	New functions. 	(cp_parser_member_declaration): Use cp_parser_skip_attributes_opt 	instead of tentative parse to peek over optional attribute tokens 	to check for CPP_COLON after them.

* g++.dg/cpp0x/pr84609.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258080 138bc75d-0d04-0410-961f-82ee72b054a4